// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svgAttribute should add a new attribute 1`] = `
"<svg focusable=\\"true\\" hidden=\\"true\\" color=\\"#fff\\">
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;

exports[`svgAttribute should add multiple attributes to svg 1`] = `
"<svg focusable=\\"false\\" hidden=\\"hidden\\">
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;

exports[`svgAttribute should add one attribute to svg 1`] = `
"<svg focusable=\\"false\\">
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;

exports[`svgAttribute should update old attribute to the new attribute 1`] = `
"<svg focusable=\\"true\\">
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;
